# eha

./: .env.example  .gitignore  README.md  ROADMAP.md  THREAT_MODEL.md  docker-compose.yml  railway.toml
apps/mobile/: app.json  (+2 more)
services/api/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 001_initial.py  002_smart_automation.py  003_slack_notifications.py  004_email_content_storage.py  005_ai_data_retention.py
services/api/app/: config.py  dependencies.py  main.py  metrics.py
services/api/app/middleware/: error_handler.py  logging.py  rate_limit.py
services/api/app/models/: __init__.py  alert.py  audit_log.py  base.py  device_token.py  digest_subscription.py  draft.py  follow_up_reminder.py  oauth_token.py  processed_message.py  proposed_event.py  rule.py  slack_config.py  user.py  user_preference.py
services/api/scripts/: seed.py
services/api/tests/: conftest.py  test_admin.py  test_ai_data_retention.py  test_alerts_router.py  test_auth.py  test_auto_categorize.py  test_categorization.py  test_crypto_service.py  test_digest.py  test_email_content_storage.py  test_event_extraction.py  test_follow_up_reminders.py  test_gmail_parser.py  test_gmail_webhook.py  test_integration.py  test_leave_time_tasks.py  test_meeting_prep.py  test_metrics.py  test_notification_dispatcher.py  test_priority_scoring.py  test_rate_limit.py  test_route_service.py  test_rules_engine.py  test_sentry.py  test_slack_router.py  test_slack_service.py  test_smart_replies.py  test_thread_context.py  test_websocket.py
(+74 files in other folders)
